--- a/.env.example
+++ b/.env.example
@@ -4,7 +4,7 @@
 #PORTAINER_CONTAINER_NAME=portainer
 #PORTAINER_IMAGE_TAG=portainer-ce:2.0.0
 
-# Traefic 
+# Traefik
 ACME_EMAIL=email.yourdomain.com
 URL_TRAEFIK_DASHBOARD=traefik.yourdomain.com
 HTTPD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/,test2:$$apr1$$d9hr9HBB$$4HxwgUir3HP4EsggP/QNo0
