--- a/.env.example
+++ b/.env.example
@@ -7,7 +7,7 @@
 # Traefik
 ACME_EMAIL=email.yourdomain.com
 URL_TRAEFIK_DASHBOARD=traefik.yourdomain.com
-HTTPD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/,test2:$$apr1$$d9hr9HBB$$4HxwgUir3HP4EsggP/QNo0
+HTTPD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/,test2:$$apr1$$d9hr9HBB$$4HxwgUir3HP4EsggP/QNo0 #Use htpasswd https://doc.traefik.io/traefik/middlewares/basicauth/
 
 # Portainer
 URL_PORTAINER_FRONTEND=portainer.yourdomain.com
