--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,14 +1,10 @@
 # Container name
 #TRAEFIK_CONTAINER_NAME=traefic
 #TRAEFIK_IMAGE_TAG=latest
-#PORTAINER_CONTAINER_NAME=portainer
-#PORTAINER_IMAGE_TAG=portainer-ce:2.0.0
 
 # Traefik
 ACME_EMAIL=email.yourdomain.com
 URL_TRAEFIK_DASHBOARD=traefik.yourdomain.com
 HTTPD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/,test2:$$apr1$$d9hr9HBB$$4HxwgUir3HP4EsggP/QNo0 #Use htpasswd https://doc.traefik.io/traefik/middlewares/basicauth/
 
-# Portainer
-URL_PORTAINER_FRONTEND=portainer.yourdomain.com
-URL_PORTAINER_EDGE=edge.yourdomain.com
+#NETWORK=
