Updated and simplified .env.template

--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,10 +1,5 @@
-# Container name
-#TRAEFIK_CONTAINER_NAME=traefic
-#TRAEFIK_IMAGE_TAG=latest
-
-# Traefik
-ACME_EMAIL=email.yourdomain.com
-URL_TRAEFIK_DASHBOARD=traefik.yourdomain.com
-HTTPD_AUTH=test:$$apr1$$H6uskkkW$$IgXLP6ewTrSuBkTrqE8wj/,test2:$$apr1$$d9hr9HBB$$4HxwgUir3HP4EsggP/QNo0 #Use htpasswd https://doc.traefik.io/traefik/middlewares/basicauth/
-
-#NETWORK=
+STACK_NAME=stack
+EMAIL=email.yourdomain.com
+DOMAIN=traefik.yourdomain.com
+CERTIFICATES_VOLUME=./letsencrypt
+#HTTPD_AUTH= DEPRECATED (now using secrets)
