--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,5 +1,5 @@
 STACK_NAME=stack
 EMAIL=email.yourdomain.com
 DOMAIN=traefik.yourdomain.com
-CERTIFICATES_VOLUME=./letsencrypt
+CERTIFICATES_VOLUME=./.letsencrypt
 #HTTPD_AUTH= DEPRECATED (now using secrets)
