--- a/portainer/.env.example
+++ b/portainer/.env.example
@@ -1,9 +1,3 @@
-# Container name
-#PORTAINER_CONTAINER_NAME=portainer
-#PORTAINER_IMAGE_TAG=portainer-ce:2.0.0
-
-# Portainer
-URL_PORTAINER_FRONTEND=portainer.yourdomain.com
-URL_PORTAINER_EDGE=edge.yourdomain.com
-
-#NETWORK=
+STACK_NAME=portainer
+DOMAIN=portainer.yourdomain.com
+EXPOSED_PORT=9000
