Use volume because swarm lacks bindmount spawn

--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -21,7 +21,7 @@ services:
     image: portainer/portainer
     command: -H tcp://tasks.agent:9001 --tlsskipverify
     volumes:
-      - ./portainer-data:/data
+      - portainer-data:/data
     networks:
       - agent-network
       - traefik-public
