--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,5 +1,6 @@
 STACK_NAME=stack
 EMAIL=email.yourdomain.com
 DOMAIN=traefik.yourdomain.com
-CERTIFICATES_VOLUME=./.letsencrypt
+# WARNING: Bind mounts does not automatically creates on linux swarm hosts throwing an error.
+#CERTIFICATES_VOLUME=./.letsencrypt
 #HTTPD_AUTH= DEPRECATED (now using secrets)
