--- a/portainer/docker-compose.yml
+++ b/portainer/docker-compose.yml
@@ -18,7 +18,7 @@ services:
           - node.platform.os == linux
 
   portainer:
-    image: portainer/portainer-ce
+    image: portainer/portainer-ce:2.0.1
     command: -H tcp://tasks.agent:9001 --tlsskipverify
     volumes:
       - portainer-data:/data
