add DOCKER_HOST to remote deployment

--- a/traefik/.env.example
+++ b/traefik/.env.example
@@ -1,6 +1,8 @@
 STACK_NAME=stack
 EMAIL=email.yourdomain.com
 DOMAIN=traefik.yourdomain.com
+#DOCKER_HOST=ssh://root@host:66
+
 # WARNING: Bind mounts does not automatically creates on linux swarm hosts throwing an error.
 #CERTIFICATES_VOLUME=./.letsencrypt
 #HTTPD_AUTH= DEPRECATED (now using secrets)
